--- a/src/components/blocks/block-count-your-idea/block-count-your-idea.jade
+++ b/src/components/blocks/block-count-your-idea/block-count-your-idea.jade
@@ -11,7 +11,7 @@
             img(src="img/semicircle02.png" alt="")
         .body Каждый проект требует  индивидуального подхода  создайте свой в нашем  конструторе
         a.btn.btn-primary(href="#") Конструктор
-    .item.item-fast.item_red
+    .item.item-fast
         .item-title Быстро
         .item-body
             | Все изменения
