--- a/src/components/info-calculate-cost/info-calculate-cost.jade
+++ b/src/components/info-calculate-cost/info-calculate-cost.jade
@@ -3,7 +3,8 @@
 +b.info-calculate-cost
     img.bg-img(src="img/img-01.png" alt="")
     +e.title Вы получите примерный расчет
-        img(src="img/semicircle03.png" alt="")
+        img.red(src="img/semicircle04.png" alt="")
+        img.white(src="img/semicircle03.png" alt="")
     +e.text
         p Оператор перезвонит вам для более подробной консультации.
         p Мы не рассылаем спам, только персональные предложения
