--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -33,3 +33,6 @@ block content
         include ../components/blocks/block-count-your-idea/block-count-your-idea
         include ../components/blocks/block-order-free-payment/block-order-free-payment
         include ../components/footer/footer
+    div.dev-modal(style='display:none;')
+        .modal-calculate-cost
+            include ../components/webforms/calculate-cost
