--- a/src/components/blocks/block-count-your-idea/block-count-your-idea.scss
+++ b/src/components/blocks/block-count-your-idea/block-count-your-idea.scss
@@ -37,12 +37,23 @@
     }
     .item {
         padding: 37px 33px;
+        transition: all 0.2s ease-in-out;
         @include max-screen(991px) {
             grid-column: span 2;
         }
         @include max-screen(767px) {
             grid-column: 1/-1;
             padding: 0;
+        }
+        &:not(.item-ticket):hover {
+            background-color: #ff3b3d;
+            box-shadow: 0 40px 40px rgba(126, 136, 173, 0.25);
+            .item-title {
+                color: #fff;
+            }
+            .item-body {
+                color: #fff;
+            }
         }
     }
     .item-title {
@@ -56,18 +67,12 @@
         line-height: 12px;
         color: #ff3b3d;
     }
-    .item_red {
-        background-color: #ff3b3d;
-        @include max-screen(767px) {
-            padding: 37px 33px;
-        }
-        .item-title {
-            color: #fff;
-        }
-        .item-body {
-            color: #fff;
-        }
-    }
+    //.item_red {
+    //    background-color: #ff3b3d;
+    //    @include max-screen(767px) {
+    //        padding: 37px 33px;
+    //    }
+    //}
     .item-fast {
         @include min-screen(992px) {
             grid-row: 1/2;
